tests/baselines/reference/jsPropertyAssignedAfterMethodDeclaration.errors.txt
/a.js(4,9): error TS2322: Type 'number' is not assignable to type '() => void'.


==== /a.js (1 errors) ====
    const o = {
        a() {
            // Should not be treated as a declaration. Should be an error.
            this.a = 0;
            ~~~~~~
!!! error TS2322: Type 'number' is not assignable to type '() => void'.
        }
    };
    